fix info column alignment and spacings

--- a/css/main.scss
+++ b/css/main.scss
@@ -92,6 +92,7 @@ a {
     @include media-query(DESKTOP) {
       width: 25%;
       height: 100%;
+      max-width: 250px;
     }
   }
 
@@ -260,7 +261,6 @@ a {
       line-height: 1.5;
 
       @include media-query(DESKTOP) {
-        width: 180px;
         font-size: $INFO-TEXT-SIZE;
       }
 
@@ -280,13 +280,12 @@ a {
       display: flex;
       flex-direction: row;
       justify-content: flex-end;
-      padding: 32px 32px 0 0;
+      padding: 32px 0 16px;
       box-sizing: border-box;
       font-size: $INFO-LINK-SIZE;
 
       @include media-query(DESKTOP) {
-        width: 80%;
-        padding: 32px 0 0 0;
+        padding: 32px 8px 0 0;
       }
 
       .language-selector {
